...
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="copy_url">Copy URL</string>
    <string name="link_copied">Link copied</string>

    <!-- Update check (REQ-13). -->
    <string name="check_for_update">Check for update</string>
    <string name="tap_to_update">Tap to update</string>
    <string name="update_available">Update available</string>
    <string name="update_available_message">A new version of this app is available on the Play Store.</string>
    <string name="update_available_badge">Update available</string>
    <string name="open_play_store">Open Play Store</string>
    <string name="not_now">Not now</string>
    <string name="up_to_date">You\'re up to date</string>
    <string name="update_check_failed">Couldn\'t check for updates. Try again later.</string>

    <!-- Main list (spec 04). -->
    <string name="add_voucher">Add Voucher</string>
    <string name="archived">Archived</string>
...
